# db_magic

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
src/db_magic/: __init__.py  auth.py  magic.py
